# nbot

./: Cargo.toml  restart.sh  test.sh
src/: args.rs  main.rs
src/commands/: docker.rs  mod.rs  nginx.rs  reset.rs  rm.rs  run.rs  start.rs  status.rs  stop.rs  up_down.rs
src/configs/: app.rs  app_state.rs  mod.rs  project.rs
src/docker/: containers.rs  exec.rs  images.rs  mod.rs  network.rs  volumes.rs
src/files/: docker_install.sh  docker_remove.sh  mod.rs  nginx.Dockerfile  nginx_default.conf  nginx_entrypoint.sh  nginx_run.sh  nginx_template.conf
src/models/: app.rs  mod.rs  project.rs
src/nginx_files/: Dockerfile  entrypoint.sh  functions.sh  mod.rs  template.conf
src/utils/: contants.rs  dirs.rs  mod.rs  networks.rs  spinner.rs  tarball.rs  version.rs
