[package]
name = "nbot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.8"
directories = "5.0.1"
once_cell = "1.18.0"
run_script = "0.10.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tabled = "0.14.0"

[profile.release]
strip = true