[package]
name = "nbot"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.15.0"
clap = "4.4.8"
directories = "5.0.1"
futures-util = "0.3.30"
once_cell = "1.18.0"
run_script = "0.10.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tabled = "0.14.0"
tar = "0.4.40"
tokio = { version = "1.36.0", features = ["macros"] }

[profile.release]
strip = true
